# internal-pypi

./: .hgignore  .python-version  LICENSE  README.md  internal_pypi.py  pyproject.toml
tests/: test_1.py
